transfer to GitHub & change name to NoCD

--- a/cmd/web/resource/template/common/footer.tmpl
+++ b/cmd/web/resource/template/common/footer.tmpl
@@ -10,12 +10,12 @@
             <div class="col-12 col-md">
                 <img class="mb-2" src="/static/image/logo.png" alt="" width="24"
                      height="24">
-                <small class="d-block mb-3 text-muted">&copy; 2018 GoCD</small>
+                <small class="d-block mb-3 text-muted">&copy; 2018 NoCD</small>
             </div>
             <div class="col-6 col-md">
                 <h5>相关链接</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="https://git.cm/naiba/gocd" target="_blank">贡献代码</a></li>
+                    <li><a class="text-muted" href="https://github.com/naiba/nocd" target="_blank">贡献代码</a></li>
                     <li>
                         <a class="text-muted" data-toggle="tooltip" data-placement="top" title="QQ群：710012414"
                            target="_blank"
@@ -45,7 +45,7 @@
             <div class="col-6 col-md">
                 <h5>开发者</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="https://git.cm/naiba" target="_blank">奶爸@Git.cm</a></li>
+                    <li><a class="text-muted" href="https://github.com/naiba" target="_blank">奶爸@Git.cm</a></li>
                     <li><span class="text-muted">邀您加入</span></li>
                 </ul>
             </div>
@@ -59,7 +59,7 @@
 <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.0/dist/clipboard.min.js"></script>
 <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/static/js/gocd.js?13"></script>
+<script type="text/javascript" src="/static/js/nocd.js?13"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{.GA_id}}"></script>
 <script>
