--- a/cmd/web/resource/template/page/index.tmpl
+++ b/cmd/web/resource/template/page/index.tmpl
@@ -2,7 +2,7 @@
 {{template "common/header" .}}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">开源持续交付系统</h1>
-    <p class="lead">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;由 Golang 开发的持续交付系统，易安装、跨平台
+    <p class="lead">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;由 golang 开发的持续交付系统，易安装、跨平台
         、轻量级。永久免费开源。是中小公司、工作室项目交付不二选择，居家旅行写代码的必备产品。</p>
 </div>
 <div class="container">
@@ -29,7 +29,7 @@
                     <small class="text-muted">编译</small>
                 </h1>
                 <p class="text-left mt-3 mb-4">
-                    任何 Go 语言 支持的平台都可以运行 GoCD，包括 Windows、Mac、Linux 以及 ARM。
+                    任何 Go 语言 支持的平台都可以运行 NoCD，包括 Windows、Mac、Linux 以及 ARM。
                 </p>
             </div>
         </div>
@@ -42,7 +42,7 @@
                     <small class="text-muted">足矣</small>
                 </h1>
                 <p class="text-left mt-3 mb-4">
-                    一个廉价的树莓派的配置足以满足 GoCD 的最低系统硬件要求。甚至可以运行在 NAS 设备上。
+                    一个廉价的树莓派的配置足以满足 NoCD 的最低系统硬件要求。甚至可以运行在 NAS 设备上。
                 </p>
             </div>
         </div>
