style: modified login chinese
- 修改全局的「登陆」为「登录」

来源：http://www.gauin.com/denglu-yu-denglu.html

--- a/cmd/web/resource/template/common/header.tmpl
+++ b/cmd/web/resource/template/common/header.tmpl
@@ -50,7 +50,7 @@
         {{.csrf_token}}
         </form>
         <button onclick="saveForm('#loginForm')" class="btn btn-outline-primary"><i
-                class="octicon octicon-mark-github"></i> 登陆
+                class="octicon octicon-mark-github"></i> 登录
         </button>
     {{end}}
     </div>
