--- a/cmd/web/resource/template/settings/index.tmpl
+++ b/cmd/web/resource/template/settings/index.tmpl
@@ -5,7 +5,7 @@
         <div class="card-body">
             <h5 class="card-title">交付结果推送</h5>
             <h6 class="card-subtitle mb-2 text-muted">请先在 <a href="https://sc.ftqq.com" target="_blank">ServerChan</a>
-                登陆，获取SCKEY并绑定微信</h6>
+                登录，获取SCKEY并绑定微信</h6>
             <form id="formNotify" onsubmit="return setNotification()">
                 <div class="form-group">
                     <label for="inputAddress">SCKEY</label>
