--- a/cmd/web/resource/template/common/header.tmpl
+++ b/cmd/web/resource/template/common/header.tmpl
@@ -13,7 +13,7 @@
     <link href="https://cdn.bootcss.com/octicons/4.4.0/font/octicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/nocd.css?_11">
 
-    <title>NoCD —— golang 开源持续交付系统</title>
+    <title>NoCD —— Go 开源持续交付系统</title>
 </head>
 <body>
 <div class="p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
