--- a/cmd/web/resource/template/page/index.tmpl
+++ b/cmd/web/resource/template/page/index.tmpl
@@ -2,7 +2,7 @@
 {{template "common/header" .}}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">开源持续交付系统</h1>
-    <p class="lead">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;由 golang 开发的持续交付系统，易安装、跨平台
+    <p class="lead">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;由 Go 开发的持续交付系统，易安装、跨平台
         、轻量级。永久免费开源。是中小公司、工作室项目交付不二选择，居家旅行写代码的必备产品。</p>
 </div>
 <div class="container">
