--- a/cmd/web/resource/template/common/footer.tmpl
+++ b/cmd/web/resource/template/common/footer.tmpl
@@ -28,24 +28,24 @@
             <div class="col-6 col-md">
                 <h5>赞助商</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a href="http://m.im/?utm_source=naiba" rel="nofollow" target="_blank" class="text-muted"><img
+                    <li><a href="https://www.riluo.cn" rel="nofollow" target="_blank" class="text-muted"><img
                             class="p-1"
                             width="100px"
-                            src="/static/image/sponsor-m_im.png"
-                            title="马克书签"></a>
+                            src="https://www.riluo.cn/static/offical/images/logo.png"
+                            title="日落米表托管"></a>
                     </li>
-                    <li><a href="http://www.sp9.com/?utm_source=naiba" rel="nofollow" target="_blank"
+                    <li><a href="https://www.idc.ee" rel="nofollow" target="_blank"
                            class="text-muted"><img class="p-1"
                                                    width="100px"
-                                                   src="/static/image/sponsor-sp9_com.png"
-                                                   title="食佰秀"></a>
+                                                   src="https://hk.cdnassets.com/ui/resellerdata/480000_509999/494274/supersite2/supersite/themes/MinimalGreen-MyTheme/images/logo.gif"
+                                                   title="雄狮主机"></a>
                     </li>
                 </ul>
             </div>
             <div class="col-6 col-md">
                 <h5>开发者</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="https://github.com/naiba" target="_blank">奶爸@Git.cm</a></li>
+                    <li><a class="text-muted" href="https://git.cm/naiba?tab=activity" target="_blank">奶爸@Git.cm</a></li>
                     <li><span class="text-muted">邀您加入</span></li>
                 </ul>
             </div>
