Move package path

--- a/cmd/web/resource/template/common/footer.tmpl
+++ b/cmd/web/resource/template/common/footer.tmpl
@@ -10,31 +10,24 @@
             <div class="col-12 col-md">
                 <img class="mb-2" src="/static/image/logo.png" alt="" width="24"
                      height="24">
-                <small class="d-block mb-3 text-muted">&copy; 2018 NoCD</small>
+                <small class="d-block mb-3 text-muted">&copy; 2017-2019 NoCD</small>
             </div>
             <div class="col-6 col-md">
                 <h5>相关链接</h5>
                 <ul class="list-unstyled text-small">
                     <li><a class="text-muted" href="https://github.com/naiba/nocd" target="_blank">贡献代码</a></li>
-                    <li>
-                        <a class="text-muted" data-toggle="tooltip" data-placement="top" title="QQ群：710012414"
-                           target="_blank"
-                           href="//shang.qq.com/wpa/qunwpa?idkey=7675ced9ff354881807cf30a0de659e336fa0518ada51c125289d8ac6dda5bc2"><img
-                                border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="奶爸 · 大佬委员会"
-                                title="奶爸 · 大佬委员会"></a>
-                    </li>
                 </ul>
             </div>
             <div class="col-6 col-md">
                 <h5>赞助商</h5>
                 <ul class="list-unstyled text-small">
+                    <li><a href="https://github.com">GitHub</a></li>
                 </ul>
             </div>
             <div class="col-6 col-md">
                 <h5>开发者</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="https://git.cm/naiba?tab=activity" target="_blank">奶爸@Git.cm</a></li>
-                    <li><span class="text-muted">邀您加入</span></li>
+                    <li><a class="text-muted" href="https://github.com/naiba" target="_blank">奶爸</a></li>
                 </ul>
             </div>
         </div>
