update reference link

--- a/cmd/web/resource/template/common/footer.tmpl
+++ b/cmd/web/resource/template/common/footer.tmpl
@@ -13,19 +13,20 @@
                 <small class="d-block mb-3 text-muted">&copy; 2017-2020 NoCD</small>
             </div>
             <div class="col-6 col-md">
-                <h5>相关链接</h5>
+                <h5>Referrence</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="https://github.com/naiba/nocd" target="_blank">贡献代码</a></li>
+                    <li><a class="text-muted" href="https://github.com/naiba/nocd" target="_blank">Source Code</a></li>
                 </ul>
             </div>
             <div class="col-6 col-md">
-                <h5>赞助商</h5>
+                <h5>Build with</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a href="https://github.com">GitHub</a></li>
+                    <li><a href="https://github.com/features/packages">GitHub Packages</a></li>
+                    <li><a href="https://github.com/features/actions">GitHub Actions</a></li>
                 </ul>
             </div>
             <div class="col-6 col-md">
-                <h5>开发者</h5>
+                <h5>Developer</h5>
                 <ul class="list-unstyled text-small">
                     <li><a class="text-muted" href="https://github.com/naiba" target="_blank">奶爸</a></li>
                 </ul>
