--- a/cmd/web/resource/template/repository/index.html
+++ b/cmd/web/resource/template/repository/index.html
@@ -134,7 +134,8 @@
                     </h5>
                     <div style="min-width: 150px">
                         <button type="button" class="btn btn-sm btn-secondary pr-1 pl-2 copy-btn"
-                                data-text="https://{{$.domain}}/webhook/{{.ID}}"
+                                data-text="{{$.domain}}/webhook/{{.ID}}"
+                                data-ext="protocol_prefix"
                                 data-toggle="tooltip"
                                 data-placement="top" title="点击复制 WebHook 地址">
                             <i class="octicon octicon-plug"></i>
