todo: 多 webhook、账号转移

--- a/cmd/web/resource/template/repository/index.html
+++ b/cmd/web/resource/template/repository/index.html
@@ -17,7 +17,7 @@
                     </select>
                 </div>
             {{.csrf_token}}
-                <button type="submit" class="btn btn-primary mb-2 ml-3">添加项目</button>
+                <button type="submit" class="btn btn-secondary mb-2 ml-3">添加项目</button>
             </form>
         </div>
     </div>
